Bug fixes: dialog on top of modal should be visible; 1x should remove range, but not change the reverse setting; warning for empty selection.

--- a/src/firefly/js/ui/ModalDialog.css
+++ b/src/firefly/js/ui/ModalDialog.css
@@ -7,7 +7,6 @@
 
 .ModalDialog {
     display: flex;
-    z-index: 110;
     position: absolute;
     width: 100%;
     flex-direction: column;
